--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^0.14.3",
     "react-redux": "^4.0.0",
     "redux": "^3.0.4",
+    "redux-promise": "^0.5.1",
     "youtube-api-search": "0.0.5"
   }
 }
