--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "lodash": "^3.10.1",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
+    "react-google-maps": "^4.7.1",
     "react-redux": "^4.0.0",
+    "react-sparklines": "^1.4.2",
     "redux": "^3.0.4",
     "redux-promise": "^0.5.1",
     "youtube-api-search": "0.0.5"
